# ai-usage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
scripts/: check-release.js  generate-icons.js  release-policy.js  verify-updater-release.js  verify-updater-signatures.js  write-latest-json.js  write-updater-config.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  scan_cache.rs
src/main/: accountInfo.js  claudePaths.js  claudeStats.js  codexPaths.js  codexStats.js  main.js  pricing.js  settingsStore.js
src/preload/: preload.js
src/renderer/: index.html  renderer.js  styles.css  tray.css  tray.html  tray.js
tests/: claudeStats.test.js  codexStats.test.js  release-check.test.js  release-policy.test.js  tray.test.js  updater-manifest.test.js  updater-release.test.js  updater-signature.test.js
