[package]
name = "ai-usage"
version = "0.1.2"
description = "A cross-platform desktop dashboard for local AI coding usage statistics."
authors = ["peipeitu <peipeitu@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/peipeitu/ai-usage"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
dirs = "6"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = "=0.3.36"
walkdir = "2"
