[package]
name = "ai-usage"
version = "0.1.5"
description = "A cross-platform desktop dashboard for local AI coding usage statistics."
authors = ["peipeitu <peipeitu@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/peipeitu/ai-usage"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
dirs = "6"
rfd = "0.17"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = "=0.3.53"
walkdir = "2"

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
url = "2"
